Fixed the issues with info bubble z-index (added high z-index on parent tile hover)

--- a/styles/refined-styles/benefit.css
+++ b/styles/refined-styles/benefit.css
@@ -76,7 +76,7 @@
 /* info bubble */
 .info-container {
     position: relative;
-    display: inline-block;
+    display: block;
   }
   
   .info-icon {
@@ -98,7 +98,6 @@
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
     width: clamp(75px, 100vw, 225px);
     text-align: left;
   }
