--- a/styles/refined-styles/tile-styles.css
+++ b/styles/refined-styles/tile-styles.css
@@ -6,7 +6,7 @@
 }
 
 .tile {
-    position: relative;
+    /* position: relative; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,6 +18,7 @@
     margin: 8px;
     padding: clamp(20px, 2vw, 50px);
     border-radius: 50px;
+    z-index: 100;
 }
 
 .frosted-tile {
@@ -105,6 +106,10 @@
     max-width: 300px;
     margin: 20px 10px;
     padding: 25px;
+}
+
+.price-tile:hover {
+    z-index: 100000;
 }
 
 .price-tile_inner-wrapper {
